# ot-harjoitustyo

./: .pylintrc  README.md  calculationhistory.txt  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  käyttöohje.md  testaus.md  tyoaikakirjanpito  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: Tehtävä 1: Monopoli - Luokkakaavio
src/: calculator.py  index.py
src/repositories/: calculationhistory.txt  history_repository.py
src/services/: calculator.py  calculator_service.py
src/tests/: calculator_test.py  calculator_view_test.py
src/tests/repositories/: history_repository_test.py
src/tests/services/: calculator_test.py
src/ui/: calculator.py  calculator_view.py  history_view.py  ui.py
