[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Tartsi <tarvo.lilja@hotmail.fi>"]

[tool.poetry.dependencies]
python = "^3.9.12"
invoke = "^1.7.0"

[tool.poetry.dev-dependencies]
coverage = "^6.3.2"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
